# new-naive-cc

./: README.md  pubspec.yaml
.github/workflows/: dart.yml
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/kotlin/com/example/demo/: MainActivity.kt
lib/: main.dart
